// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createYogaNodes should account for margin values in layout 1`] = `
Array [
  Layout {
    "bottom": 1,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 0,
    "width": 500,
  },
  Layout {
    "bottom": 1,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 21,
    "width": 500,
  },
  Layout {
    "bottom": 1,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 42,
    "width": 500,
  },
]
`;

exports[`createYogaNodes should allow for absolute positioning 1`] = `
Array [
  Layout {
    "bottom": 1,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 1,
    "width": 0,
  },
  Layout {
    "bottom": 1,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 1,
    "width": 0,
  },
  Layout {
    "bottom": 1,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 1,
    "width": 0,
  },
]
`;

exports[`createYogaNodes should allow for percentage positioning 1`] = `
Array [
  Layout {
    "bottom": 150,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 150,
    "width": 0,
  },
  Layout {
    "bottom": 150,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 150,
    "width": 0,
  },
  Layout {
    "bottom": 150,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 150,
    "width": 0,
  },
]
`;

exports[`createYogaNodes should offset children with absolute top 1`] = `
Array [
  Layout {
    "bottom": 0,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 0,
    "width": 500,
  },
  Layout {
    "bottom": 0,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 20,
    "width": 500,
  },
  Layout {
    "bottom": 0,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 40,
    "width": 500,
  },
]
`;

exports[`createYogaNodes should position relative by default 1`] = `
Array [
  Layout {
    "bottom": 1,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 1,
    "width": 500,
  },
  Layout {
    "bottom": 1,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 21,
    "width": 500,
  },
  Layout {
    "bottom": 1,
    "height": 20,
    "left": 0,
    "right": 0,
    "top": 41,
    "width": 500,
  },
]
`;
